# BookingSystem-app

./: .env.example  .gitignore  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.docker/mongo/: .env.mongo.example  Dockerfile.mongo
.docker/poetry/: Dockerfile.poetry
.docker/redis/: .env.redis.example  Dockerfile.redis
Report/: comparison_results.csv  main.lof  main.lot  main.tex  performance_results_mongo.csv  performance_results_mongo_json.csv  performance_results_redis_json.csv
Report/chapters/: annexes.tex  conclusion.tex  discussion.tex  introduction.tex  materiels_et_methodes.tex  resultats.tex  titlepage.tex
Report/small/: comparison_results.csv  performance_results_mongo.csv  performance_results_mongo_json.csv  performance_results_redis_json.csv
report/performance/: JSON_performance_report.txt  MONGO_JSON_performance_report.txt  MongoDB_performance_report.txt  REDIS_JSON_performance_report.txt
src/api/: req_mongo.py  requests_json.py  requests_mongo.py  requests_redis.py
src/config/: connectionMongo.py  connectionRedis.py
src/decorators/: timing.py
src/libs/DAL/: inject_new_data_to_mongo.py  inject_new_data_to_redis.py  to_json.py
src/libs/services/: Json_Query_Search.py  Requests_mongo.py  get_data_from_mongo.py  get_data_from_redis.py
src/performance/: perf_mongo.py  perf_mongo_json.py  perf_redis_json.py
src/scripts/: comparison_result.py  fake_data.py  generate_graphs.py  resources_comparison.py
